--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: #16161a;
+    background-color: #4E3A28;
     color: #fff;
     font-family: "Poppins", sans-serif;
 }
@@ -37,7 +37,7 @@ header nav .header_links ul li, section.main ul li {
 header nav .header_links ul li a {
     outline: none;
     text-decoration: none;
-    color: #a6a8b8;
+    color: white;
     padding: 5px 12px;
     transition: 0.3s all;
     font-size: 15px;
@@ -102,7 +102,7 @@ section.main img {
 }
 
 section.main span {
-    color: #fffffe;
+    color: #5AA8B3;
     font-size: 30px;
     font-weight: bold;
 }
@@ -113,7 +113,7 @@ section.main p {
     border-right: 2px solid rgba(255, 255, 255, .75);
     white-space: nowrap;
     overflow: hidden;
-    color: #94a1b2;
+    color: white;
     font-size: 13px;
     animation: typewriter 4s steps(44) 1s 1 normal both, blinkTextCursor 530ms steps(44) infinite normal;
 }
@@ -127,7 +127,7 @@ section.main ul {
 }
 
 section.main ul li a {
-    color: #a6a8b8;
+    color: #e4c5a6;
     display: flex;
     text-decoration: none;
     margin: 20px 5px;
